Исправления в Products и Cards

--- a/src/partials/cards.html
+++ b/src/partials/cards.html
@@ -3,11 +3,11 @@
         <h2 class="hidden">Contacts</h2>
         <ul class="list cards-list">
             <li class="cards-item">
-                <div class="cards-contacts">
-                <h3 class="cards-title">Cafe</h3>
+                <div class="contacts-cards">
+                <h3 class="contacts-title">Cafe</h3>
                 <div class="cards-content">
                     <span class="cards-label">Chicago</span>
-                    <p class="cards-text">
+                    <p class="contacts-text">
                         Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
                     <ul class="list schedule">
@@ -20,19 +20,19 @@
                             <p class="cards-time">08:00 AM - 16:00 PM</p>
                         </li>
                     </ul>
-                    <p class="cards-mail">
-                        <a href="tel:+380961111111">+61(0) 383 766 284</a>
-                        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+                    <p>
+                        <a class="cards-mail" href="tel:+380961111111">+61(0) 383 766 284</a>
+                        <a class="cards-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
                     </p>
                 </div>
                 </div>
             </li>
             <li class="cards-item">
-                <div class="cards-contacts">
-                <h3 class="cards-title">Food track</h3>
+                <div class="contacts-cards">
+                <h3 class="contacts-title">Food track</h3>
                   <div class="cards-content">
                     <span class="cards-label">Los Angeles</span>
-                    <p class="cards-text">
+                    <p class="contacts-text">
                         Fusce ut velit laoreet, tempus arcu molestie vulputate
                     </p>
                     <ul class="list schedule">
@@ -45,19 +45,19 @@
                             <p class="cards-time">08:00 AM - 16:00 PM</p>
                         </li>
                     </ul>
-                        <p class="cards-mail">
-                           <a href="tel:+380961111111">+61(0) 383 766 284</a>
-                           <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        <p>
+                           <a class="cards-mail" href="tel:+380961111111">+61(0) 383 766 284</a>
+                           <a class="cards-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
                         </p>
                    </div>
                 </div>
             </li>
             <li class="cards-item">
-                <div class="cards-contacts">
-                    <h3 class="cards-title">Cafe</h3>
+                <div class="contacts-cards">
+                    <h3 class="contacts-title">Cafe</h3>
                     <div class="cards-content">
                         <span class="cards-label">New York</span>
-                        <p class="cards-text">
+                        <p class="contacts-text">
                             Fusce ut velit laoreet, tempus arcu molestie vulputate
                         </p>
                         <ul class="list schedule">
@@ -70,9 +70,9 @@
                                 <p class="cards-time">08:00 AM - 16:00 PM</p>
                             </li>
                         </ul>
-                        <p class="cards-mail">
-                            <a href="tel:+380961111111">+61(0) 383 766 284</a>
-                            <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+                        <p >
+                            <a class="cards-mail" href="tel:+380961111111">+61(0) 383 766 284</a>
+                            <a class="cards-mail" href="mailto:noreply@envato.com">noreply@envato.com</a>
                         </p>
                     </div>
                 </div>
