--- a/src/sass/layouts/_cards.scss
+++ b/src/sass/layouts/_cards.scss
@@ -70,7 +70,7 @@
   }
 }
 
-.cards-contacts {
+.contacts-cards {
   height: 100%;
   padding: 43px 20px;
 
@@ -83,7 +83,7 @@
   }
 }
 
-.cards-title {
+.contacts-title {
   width: 80px;
   background-color: $bg-product-beige;
   display: inline-block;
@@ -111,7 +111,7 @@
   }
 }
 
-.cards-item:nth-child(2) .cards-title {
+.cards-item:nth-child(2) .contacts-title {
   width: 160px;
   background-color: $bg-product-green;
 
@@ -187,7 +187,7 @@
   }
 }
 
-.cards-text {
+.contacts-text {
   margin: 10px 0 50px;
   color: $text-grey;
   text-align: left;
@@ -237,8 +237,10 @@
 }
 
 .cards-mail {
+  display: inline-block;
   margin: 0;
   color: $text-grey;
+  text-decoration: none;
 
   @include for-size(tablet) {
     font-size: 14px;
@@ -300,6 +302,7 @@
   @include for-size(desktop) {
     width: 198px;
   }
+
   color: $bg-white;
   background-color: $main-text-color;
 
@@ -322,6 +325,7 @@
 
   color: $main-text-color;
   background-color: $bg-white;
+
   &:hover {
     cursor: pointer;
     background-color: $button-bg-hover;
@@ -331,6 +335,8 @@
 .cards-icon {
   display: inline-block;
   margin-left: 4px;
+  width: 19px;
+  height: 12px;
 
   @include for-size(tablet) {
     margin-left: 8px;
