--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,7 +22,7 @@
                         </button>
                         <button type="button" class="btn-header">
                             <svg class="btn-icon" width="4" height="8">
-                                <use xlink:href="./images/sprite.svg#icon-vector">
+                                <use xlink:href="./images/sprite.svg#icon-cheveron-right">
                                 </use>
                             </svg>Buy now</button>
                     </div>
