adds styles for adaptive version for desktop

--- a/src/sass/hero/_hero-container.scss
+++ b/src/sass/hero/_hero-container.scss
@@ -9,14 +9,21 @@
   @include for-size(tablet) {
     padding-top: 15px;
     padding-left: 34px;
-    padding-bottom: 0px;
+    padding-right: 34px;
+    padding-bottom: 28px;
     overflow: visible;
   }
 
   @include for-size(desktop) {
     padding-top: 84px;
     padding-left: 74px;
+    padding-bottom: 45px;
+    padding-right: 74px;
   }
+}
+
+.hero-header {
+  display: flex;
 }
 
 .hero-about {
@@ -26,11 +33,13 @@
 
   @include for-size(tablet) {
     width: 162px;
+    margin-bottom: 19px;
   }
 
   @include for-size(desktop) {
     width: 277px;
     margin-left: 38px;
+    margin-bottom: 56px;
   }
 }
 
