--- a/src/sass/hero/_hero-products.scss
+++ b/src/sass/hero/_hero-products.scss
@@ -1,18 +1,46 @@
+.product-logo {
+  margin-left: auto;
+  position: absolute;
+  top: 21px;
+  right: 0;
+  z-index: 2;
+
+  @include for-size(desktop) {
+    top: 4px;
+    right: 0;
+  }
+}
+
 .products-text {
   font-family: $main-font;
   @include fonts(400, 8px, 1.5, 0em);
   color: getColor('textLight');
   width: 114px;
 
+  @include for-size(tablet) {
+    margin-bottom: 7px;
+    padding-top: 47px;
+  }
+
   @include for-size(desktop) {
     @include fonts(400, 14px, 1.4, 0em);
     width: 200px;
+    padding-top: 56px;
+    margin-bottom: 20px;
   }
 }
 
 .hero-products {
+  display: flex;
+  position: relative;
+
   @include for-size(mobile-only) {
     display: none;
+  }
+}
+.products-block {
+  @include for-size(desktop) {
+    margin-left: 30px;
   }
 
   & > svg {
