--- a/src/sass/swiper-slide/_swiper.scss
+++ b/src/sass/swiper-slide/_swiper.scss
@@ -1,5 +1,6 @@
 .image-slider {
   padding: 30px 0px 30px 0px;
+
   &__slide {
     text-align: center;
   }
@@ -65,5 +66,14 @@
     border-radius: 50%;
     background-color: getColor('btnActiv');
     margin-bottom: 15px;
+  }
+  &__decoration {
+    padding: 45px;
+    @include for-size('tablet') {
+      padding: 60px;
+    }
+    @include for-size('desktop') {
+      padding: 65px;
+    }
   }
 }
