--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products-section">
+<section id="our-products" class="products-section">
     <div class="container">
         <h2 class="products-headings"><span class="products-naturalness">100% natural</span> products</h2>
         <ul class="products-list">
