додає кнопку "на верх"

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,4 +32,11 @@
       </a>
     </div>
   </div>
+  <a
+    class="up-btn"
+    target="_blank"
+    rel="noopener noreferer"
+    aria-label="Arrow"
+    href="#"
+  ></a>
 </section>
