--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -109,3 +109,37 @@
     line-height: 1.28;
   }
 }
+
+#go-top {
+  position: fixed;
+  right: 10px;
+  bottom: 200px;
+  width: 50px;
+  height: 50px;
+  border-color: transparent;
+  border-radius: 50%;
+  background-color: $primary-accent;
+  display: none;
+  &:hover,
+  &:focus {
+    filter: brightness(1.5);
+    outline: block;
+  }
+
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &::after {
+    width: 15px;
+    height: 15px;
+    transform: translate(-50%, -50%) rotate(45deg);
+    border-top: 5px solid $btn-grey;
+    border-left: 5px solid $btn-grey;
+  }
+}
