--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,7 +5,7 @@
                 <div class="passions">
                     <h1 class="passions-text">ice cream made with <span>passion</span></h1>
                     <div class="anchor">
-                        <a class="anchor-products" href="#products">Products</a>
+                        <a class="anchor-products" href="#our-products">Products</a>
                         <a class="anchor-how-its-made" href="#how-its-made">How it’s made?</a>
                     </div>
                 </div>
