добавляет якорные ссылки с плавным переходом

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="contact">
+<section class="contact" id="contact">
     <div class="container contact-rel">
         <div class="contact-position">
             <ul class="list contact-list">
