--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -1,4 +1,4 @@
-<section class=" section section_how_made">
+<section class=" section section_how_made" id="how-made">
     <div class=" container hm_container">
         
 <p class="hm_caption">tradition and love</p>
