--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<section class="benefits">
+<section class="benefits" id="benefits">
   <div class="container">
     <h2 class="visually-hidden">Benefits</h2>
     <ul class="benefits-list list">
