--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products" id="products">
   <div class="container">
     <h2 class="products-title">
       <p class="title-accent" data-aos="products-card-title-animation">
