--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,9 @@
   <div class="header container">
     <!-- Логотип -->
     <a class="logo" href="./index.html">
-      <img class="logo-icon" src="./images/svg/logo 1.svg" alt="Dont worry be happy" />
+      <picture>
+        <img class="logo-icon" src="./images/logo2x.png" alt="Dont worry be happy" />
+      </picture>
       <!-- <svg class="logo-icon">
         <use href="./images/svg/sprite.svg#logo"></use>
       </svg> -->
