--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -688,20 +688,20 @@ h6 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding-top: 47px;
+    /*padding-top: 47px;*/
     padding-bottom: 6px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .bio-eco {
-    padding-top: 55px;
     padding-bottom: 11px;
   }
 }
 
 .bio-eco .btn-circle {
   padding: 0;
+  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
