--- a/src/partials/mass.html
+++ b/src/partials/mass.html
@@ -2,14 +2,17 @@
     <div class="container">
         <ul class="mass-list">
             <li class="mass-item">
+                <div class="icon-box"></div>
                 <p class="mass-overhead">721</p>
                 <p class="mass-label">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="mass-item">
+                <div class="icon-box"></div>
                 <p class="mass-overhead">16kg</p>
                 <p class="mass-label">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
             <li class="mass-item">
+                <div class="icon-box"></div>
                 <p class="mass-overhead">84</p>
                 <p class="mass-label">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
