add id from section

--- a/src/partials/How-it’s-made.html
+++ b/src/partials/How-it’s-made.html
@@ -1,6 +1,6 @@
 <!-- How it’s made? -->
 <!-- hm = how made -->
-<section class="container how-made">
+<section class="container how-made" id="recipy">
     <div class="hm-backgroung-image"></div>
     <p class="hm-h3">tradition and love </p>
     <h2 class="hm-h2">how it’s made?</h2>
