--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="container overley">
+<section class="container overley" id="contact">
     <div class="cover"></div>
     <div class="contacts-cards">
         <ul class="contact-list">
