фиксит марджины в десктопе и таблете

--- a/src/sass/layouts/_section-howitsmade.scss
+++ b/src/sass/layouts/_section-howitsmade.scss
@@ -146,6 +146,10 @@
     margin-top: 100px;
     font-size: 14px;
     line-height: 1.78;
+
+    p:not(:first-child) {
+      margin-top: 35px;
+    }
   }
 
   @include for-size(desktop) {
@@ -153,6 +157,10 @@
     margin-top: 106px;
     font-size: 16px;
     line-height: 1.75;
+
+    p:not(:first-child) {
+      margin-top: 35px;
+    }
   }
 }
 
@@ -175,6 +183,8 @@
   color: $accent-color;
   background: $white-color;
 
+  transition-duration: 250ms;
+
   &:hover {
     background: $button-secondary-hover;
   }
@@ -186,6 +196,11 @@
   @include for-size(tablet) {
     font-size: 16px;
     line-height: 1.31;
+    margin-top: 62px;
+  }
+
+  @include for-size(desktop) {
+    margin-top: 40px;
   }
 }
 
