--- a/src/sass/layouts/_modal-window.scss
+++ b/src/sass/layouts/_modal-window.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 245, 246, 0.7);
-  transition: getTransition('transition-opacity');
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -39,7 +39,7 @@
   border-radius: 30px;
   cursor: pointer;
 
-  // transition: getTransition('transition-transform');
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @include for-size(mobile-only) {
     min-width: 100%;
@@ -73,7 +73,7 @@
   background-color: #ffffff;
   border: 1px solid rgba(255, 245, 246, 1);
   fill: $accent-color;
-  // transition: getTransition('transition-fill');
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
