--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -29,11 +29,11 @@
   display: none;
 }
 
-.shops-section {
-  width: 220px;
-  margin-left: auto;
-  margin-right: auto;
-}
+// .shops-section {
+//   width: 220px;
+//   padding-left: 20px;
+//   padding-right: 20px;
+// }
 
 .shops-title {
   font-weight: 500;
