--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -24,3 +24,5 @@ $colors: (
 // fonts
 $main-font: DM Sans, sans-serif;
 $secondary-font: Titan One, cursive;
+
+$timing-function: cubic-bezier(0.4, 0, 0.2, 1);
