Composition section fixed
поставив макс-відз, змінив відповідно топ, але фотка-галерея сидить все одно якось нерівно.

--- a/src/sass/layouts/_section-composition.scss
+++ b/src/sass/layouts/_section-composition.scss
@@ -114,12 +114,15 @@
 .gallery-image {
     display: block;
     position: absolute;
-    top: 648px;
-    margin: 0;
+    top: 654px;
+    max-width: 280px;
+    margin: 0 auto;
     @include for-size(tablet) {
-        top: 361px;
+        max-width: 700px;
+        top: 370px;
     }
     @include for-size(desktop) {
-        top: 361px;
+        max-width: 1240px;
+        top: 366px;
     }
 }
