--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,48 @@
 <header class="header-section">
     <div class="header-container">
-        
+        <a href="./index.html" class="header-link">
+            <img src="./images/logo-header.png" alt="logo-header-png">
+        </a>
+        <div class="header-navigation">
+            <ul class=header-link-navigation>
+                <li class="header-item"><a href="" class="header-current">Home</a></li>
+                <li class="header-item"><a href="">About us</a></li>
+                <li class="header-item"><a href="">How it’s made?</a></li>
+                <li class="header-item"><a href="">Our products</a></li>
+                <li class="header-item"><a href="">Contact</a></li>
+            </ul>
+        </div>
+        <div class="header-menu-container is-open" id="menu-container" data-menu>
+            <div class="header-buy-container">
+                <button type="button" class="header-button-modal">
+                    <img src="./images/buy_now.png" alt="buy-now-png" class="header-buy-img">
+                </button>
+            </div>
+            <div class="header-navigation">
+                <ul>
+                    <li class="header-item"><a href="" class="header-current">Home</a></li>
+                    <li class="header-item"><a href="">About us</a></li>
+                    <li class="header-item"><a href="">How it’s made?</a></li>
+                    <li class="header-item"><a href="">Our products</a></li>
+                    <li class="header-item"><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="header-add">
+            <button type="button" class="menu-button is-open" aria-expanded="false" aria-controls="menu-container" data-menu-button>
+                <svg width="40" height="40" class="icon menu-icon" viewBox="0 0 32 32" aria-label="переключатель мобильного меню">
+                    <path class="icon-open" d="M6.4 11.733v-2.133h19.2v2.133h-19.2zM6.4 17.067h19.2v-2.133h-19.2v2.133zM6.4 22.4h19.2v-2.133h-19.2v2.133z">
+                    </path>
+                </svg>
+                <svg width="40" height="40" class="icon close-icon" viewBox="0 0 32 32" aria-label="переключатель мобильного меню">
+                    <path class="icon-close" d="M23.733 10.304l-1.504-1.504-5.963 5.963-5.963-5.963-1.504 1.504 5.963 5.963-5.963 5.963 1.504 1.504 5.963-5.963 5.963 5.963 1.504-1.504-5.963-5.963 5.963-5.963z"></path>
+                </svg>
+            </button>
+            <div class="header-buy-container-pc">
+                <button type="button" class="header-button-modal">
+                    <img src="./images/buy_now.png" alt="buy-now-png" class="header-buy-img">
+                </button>
+            </div>
+        </div>
     </div>
 </header>
