--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,3 +1,8 @@
+/*
+* {
+    outline: 1px solid black;
+}
+*/
 .header-section {
 
     position: relative;
@@ -10,4 +15,239 @@
     margin-left: auto;
     margin-right: auto;
 
+    @media screen and (min-width: 768px) {
+        padding-left: 34px;
+        padding-right: 34px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        padding-left: 46px;
+        padding-right: 115px;
+    }
 }
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 6px;
+
+    @media screen and (min-width: 768px) {
+        padding-top: 37px;
+    }
+}
+
+.header-link {
+    display: block;
+    width: 199px;
+
+}
+
+.header-button-menu {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
+
+.menu-button {
+    
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    border: none;
+
+    background-color: transparent;
+
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+}
+
+.menu-button .menu-icon {
+    display: none;
+}
+
+.menu-button.is-open .close-icon {
+    display: none;
+}
+
+.menu-button.is-open .menu-icon {
+    display: block;
+}
+
+
+
+.container-mobile {
+
+    display: block;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+}
+
+.header-menu-container {
+    display: block;
+
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+
+    height: 502px;
+    background-color: #E17992;
+    
+    padding-top: 60px;
+
+    font-size: 20px;
+
+    &.is-open {
+        display: none;
+  
+    }
+
+
+    @media screen and (min-width: 768px) {
+        width: 254px;
+        height: 1020px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: none;
+    }
+    
+}
+
+
+.icon {
+    display: inline-block;
+
+    background-color: #fff;
+  }
+
+  .icon-open {
+    fill: #D41443;
+  }
+
+  .icon-close {
+    fill: #D41443;
+  }
+
+  .header-button-modal {
+      height: 46px;
+      width: 209px;
+
+      margin-left: auto;
+      margin-right: auto;
+
+      border-radius: 22px;
+
+      background-color: #fff;
+      text-align: center;
+    
+    &:hover , &:focus {
+        background-color: #ECEBEB;
+    }
+  }
+
+  .header-add .header-buy-container {
+    display: none;
+
+    @media screen and (min-width: 768px) {
+        display: grid;
+    }
+  }
+
+  .header-container > .header-navigation {
+    display: none;
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        padding-top: 0;
+        
+    }
+  }
+
+
+.header-buy-img {
+    margin-left: auto;
+    margin-right: auto;
+
+    width: auto;
+    height: 44px;
+}
+
+.header-buy-container {
+    display: grid;
+}
+
+.header-buy-container-pc {
+    display: none;
+
+    @media screen and (min-width: 768px) {
+        display: block;
+        margin-left: 20px;  
+    }
+}
+
+.header-navigation {
+    padding-top: 19px;
+}
+
+.header-link-navigation {
+    display: flex;
+}
+
+.header-item > a {
+    display: block;
+
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 20px;
+
+    border-top: 1px solid #E18298;
+    border-bottom: 1px solid #E18298;
+
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.28;
+
+    color: #fff;
+    
+    @media screen and (min-width: 768px) {
+        padding-left: 24px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        color: #D41443;
+
+        padding-left: 35px;
+
+        font-size: 16px;
+        line-height: 1.31;
+
+        border: none;
+    }
+ }
+
+ .header-item {
+     height: 100%;
+ }
+
+.header-add {
+    display: flex;
+}
+
+  .header-text {
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.3125;
+        
+    color: #D41443;
+  }
