--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -1,116 +1,121 @@
 <section class="container head-container" >
-    <!-- NAV -->
-    <header>
-        <nav class="nav">
-            
-            <a href="index.html" class="logo"> 
-                <svg class="logo_icon">
-                    <use href="././images/icons/sprite.svg#logo-icon"></use>                                         
-                </svg> 
-            </a>                
-            <ul class="site-nav">
-                <li class="nav-item"><a href="index.html" class="nav-link current">Home</a></li>
-                <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
-                <li class="nav-item"><a href="#recipy" class="nav-link">How it’s made?</a></li>
-                <li class="nav-item"><a href="#products" class="nav-link">Our products</a></li>
-                <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> 
-            </ul>
-            <div class="btn-container">
-                <button type="button" class="menu-btn open-btn" data-menu-open>
-                    <svg class="open-icon">
-                        <use href="././images/icons/sprite.svg#open-icon"></use>
-                    </svg>
-                </button>
-                <button type="button" class="btn2 buy-btn buy-btn--nmob">
-                    Buy now
-                    <svg class="right-icon">
-                        <use href="././images/icons/sprite.svg#right-icon"></use>
-                    </svg>
-                </button>
-            </div>
-            
-            <div class="mobile-menu" data-menu>
-                <button type="button" class="menu-btn close-btn" data-menu-close>
-                    <svg class="cross-icon">
-                        <use href="././images/icons/sprite.svg#close-icon"></use>
-                    </svg>
-                </button>
-                <button type="button" class="btn2 buy-btn buy-btn--mob">
-                    Buy now
-                    <svg class="right-icon">
-                        <use href="././images/icons/sprite.svg#right-icon"></use>
-                    </svg>
-                </button>
-                <ul class="mobile-site-nav">
-                    <li class="mobile-nav-item"><a href="index.html" class="current nav-link">Home</a></li>
-                    <li class="mobile-nav-item"><a href="#about" class="nav-link">About us</a></li>
-                    <li class="mobile-nav-item"><a href="#made" class="nav-link">How it’s made?</a></li>
-                    <li class="mobile-nav-item"><a href="#products" class="nav-link">Our products</a></li>
-                    <li class="mobile-nav-item"><a href="#footer" class="nav-link">Contact</a></li> 
-                </ul>
-            </div>
-        </nav>
-    </header>
 
-    <!--ГЕРОЙ-->
-    <section class="hero" id="about">
-             
-        <div class="left-block">
-            <!-- ЗАГОЛОВОК -->
-            <div class="title-block">
-                <h1 class="hero-title">ice cream <br> made with<br>     
-                    <span class="hero-title--accent">passion</span>
-                </h1>
-                <div class="hero-btn-block">
-                    <button class="btn">Products</button>
-                    <button class="btn2">How it’s made?</button>
-                </div>
+    <div class="above-container">
+         <!-- NAV -->
+        <header>
+            <nav class="nav">
                 
-            </div>
-
-            <!-- ВІО ЕКО -->
-
-            <div class="bio">
-                <picture class="milk">
-                    <source srcset="././images/hero/milk_tablet.png 1x, ././images/hero/milk_tablet@2x.png 2x" media="(max-width: 1199px)"/>
-                    <source srcset="././images/hero/milk_desktop.png 1x, ././images/hero/milk_desktop@2x.png 2x" media="(min-width: 1200px)"/>
-                    <img src="././images/hero/milk_tablet.png" alt="milk"/>
-                </picture>
-                <div class="bio-eco">
-                    <p class="bio-eco-descr">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    </p>
-                    <button class="btn-circle">
-                        <svg class="arrow-icon">
-                            <use href="././images/icons/sprite.svg#arrow-icon" width="9px"></use>
+                <a href="index.html" class="logo"> 
+                    <svg class="logo_icon">
+                        <use href="././images/icons/sprite.svg#logo-icon"></use>                                         
+                    </svg> 
+                </a>                
+                <ul class="site-nav">
+                    <li class="nav-item"><a href="index.html" class="nav-link current">Home</a></li>
+                    <li class="nav-item"><a href="#about" class="nav-link">About us</a></li>
+                    <li class="nav-item"><a href="#recipy" class="nav-link">How it’s made?</a></li>
+                    <li class="nav-item"><a href="#products" class="nav-link">Our products</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> 
+                </ul>
+                <div class="btn-container">
+                    <button type="button" class="menu-btn open-btn" data-menu-open>
+                        <svg class="open-icon">
+                            <use href="././images/icons/sprite.svg#open-icon"></use>
+                        </svg>
+                    </button>
+                    <button type="button" class="btn2 buy-btn buy-btn--nmob">
+                        Buy now
+                        <svg class="right-icon">
+                            <use href="././images/icons/sprite.svg#right-icon"></use>
                         </svg>
                     </button>
                 </div>
-            </div>
-        </div>
-        
-       <div class="r-block">
-                <!-- ТОЧКИ ПРОДАЖУ -->
-            <div class="sales-points">
-                <div class="points caffee">
-                    <p class="points-number">16</p>
-                    <p class="points-title">cafes</p>                        
+                
+                <div class="mobile-menu" data-menu>
+                    <button type="button" class="menu-btn close-btn" data-menu-close>
+                        <svg class="cross-icon">
+                            <use href="././images/icons/sprite.svg#close-icon"></use>
+                        </svg>
+                    </button>
+                    <button type="button" class="btn2 buy-btn buy-btn--mob">
+                        Buy now
+                        <svg class="right-icon">
+                            <use href="././images/icons/sprite.svg#right-icon"></use>
+                        </svg>
+                    </button>
+                    <ul class="mobile-site-nav">
+                        <li class="mobile-nav-item"><a href="index.html" class="current nav-link">Home</a></li>
+                        <li class="mobile-nav-item"><a href="#about" class="nav-link">About us</a></li>
+                        <li class="mobile-nav-item"><a href="#made" class="nav-link">How it’s made?</a></li>
+                        <li class="mobile-nav-item"><a href="#products" class="nav-link">Our products</a></li>
+                        <li class="mobile-nav-item"><a href="#footer" class="nav-link">Contact</a></li> 
+                    </ul>
                 </div>
-                <div class="points tracks">
-                    <p class="points-number">23</p>
-                    <p class="points-title">food trucks</p>                        
+            </nav>
+        </header>
+    
+        <!--ГЕРОЙ-->
+        <section class="hero" id="about">
+                 
+            <div class="left-block">
+                <!-- ЗАГОЛОВОК -->
+                <div class="title-block">
+                    <h1 class="hero-title">ice cream <br> made with<br>     
+                        <span class="hero-title--accent">passion</span>
+                    </h1>
+                    <div class="hero-btn-block">
+                        <button class="btn">Products</button>
+                        <button class="btn2">How it’s made?</button>
+                    </div>
+                    
+                </div>
+    
+                <!-- ВІО ЕКО -->
+    
+                <div class="bio">
+                    <picture class="milk">
+                        <source srcset="././images/hero/milk_tablet.png 1x, ././images/hero/milk_tablet@2x.png 2x" media="(max-width: 1199px)"/>
+                        <source srcset="././images/hero/milk_desktop.png 1x, ././images/hero/milk_desktop@2x.png 2x" media="(min-width: 1200px)"/>
+                        <img src="././images/hero/milk_tablet.png" alt="milk"/>
+                    </picture>
+                    <div class="bio-eco">
+                        <p class="bio-eco-descr">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                        </p>
+                        <button class="btn-circle">
+                            <svg class="arrow-icon">
+                                <use href="././images/icons/sprite.svg#arrow-icon" width="9px"></use>
+                            </svg>
+                        </button>
+                    </div>
                 </div>
             </div>
-            <picture class="girl">
-                <source srcset="././images/hero/girl_tablet.png 1x, ././images/hero/girl_tablet@2x.png 2x" media="(max-width: 1199px)"/>
-                <source srcset="././images/hero/girl_desktop.png 1x, ././images/hero/girl_desktop@2x.png 2x" media="(min-width: 1200px)"/>
-                <img src="././images/hero/girl_tablet.png" alt="girl eating ice-cream"/>
-            </picture>
-       </div>
-             
-           
-        
-    </section>
+            
+           <div class="r-block">
+                    <!-- ТОЧКИ ПРОДАЖУ -->
+                <div class="sales-points">
+                    <div class="points caffee">
+                        <p class="points-number">16</p>
+                        <p class="points-title">cafes</p>                        
+                    </div>
+                    <div class="points tracks">
+                        <p class="points-number">23</p>
+                        <p class="points-title">food trucks</p>                        
+                    </div>
+                </div>
+                <picture class="girl">
+                    <source srcset="././images/hero/girl_tablet.png 1x, ././images/hero/girl_tablet@2x.png 2x" media="(max-width: 1199px)"/>
+                    <source srcset="././images/hero/girl_desktop.png 1x, ././images/hero/girl_desktop@2x.png 2x" media="(min-width: 1200px)"/>
+                    <img src="././images/hero/girl_tablet.png" alt="girl eating ice-cream"/>
+                </picture>
+           </div>
+                 
+               
+            
+        </section>
+    </div>
+   
+    
       
         
 
