--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,47 +1,81 @@
 .head-container {
-    position: relative;
-    padding-top: 6px;
-
-    padding-left: 20px;
-
+    /*position: relative;*/
+    padding-top: 0;
 
     height: 502px;
 
+    display: flex;
+    justify-content: center;
+    
+    background-color: $accent-color;
+
+    @media screen  and (min-width:1200px){
+        padding-top: 0;
+        height: 665px;       
+     
+    }
+
+    @media screen  and (min-width:768px) and (max-width:1199px) {
+        padding-top: 0;
+        padding-right: 34px;
+
+        height: 399px;
+    }   
+}
+
+.above-container {
+    width: 320px;
+
+    padding-top: 6px;
+    padding-left: 20px;
+
+   
     background-image: url('./../images/hero/icecream_mob.png'), url('./../images/hero/ellipse_mob.png');
     background-repeat: no-repeat;
     background-position: left 117px bottom 0px, top 92px right 0px;
     
-    @media screen and (min-device-pixel-ratio: 2),
+    @media screen and (min-device-pixel-ratio:2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
             background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
     }
-    
-    background-color: $accent-color;
 
-    @media screen  and (min-width:768px) and (max-width:1199px) {
+    @media screen and (min-width:768px) and (max-width:1199px){
+        width: 768px;
         padding-top: 37px;
-        padding-right: 34px;
 
-        height: 399px;
-
+        
         background-image: url('./../images/hero/icecream_tablet.png'), url('./../images/hero/ellipse_tablet.png');
         background-repeat: no-repeat;
-        background-position: top 63px right 247px, top 31px right 137px;
+        background-position: top 63px right 214px, top 31px right 103px;
         
-        @media screen and (min-device-pixel-ratio: 2),
+        @media screen and (min-device-pixel-ratio:2),
             screen and (min-resolution: 192dpi),
             screen and (min-resolution: 2dppx) {
-                background-image: url('./../images/hero/icecream_tablet@2x.png'), url('./../images/hero/ellipse_tablet@2x.png');
+                    background-image: url('./../images/hero/icecream_tablet@2x.png'), url('./../images/hero/ellipse_tablet@2x.png');
         }
     }
-
-    @media screen  and (min-width:1200px){
+    @media screen and (min-width:1280px) {
+        width: 1280px;
         padding-top: 37px;
-        height: 665px;
-
         padding-right: 115px;
-
+    
+        background-image: url('./../images/hero/icecream_desktop.png'), url('./../images/hero/ellipse_desktop.png');
+        background-repeat: no-repeat;
+        background-position: top 108px right 450px, top 55px right 267px;
+        
+        @media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                    background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
+        }
+    
+    }
+    @media screen and (min-width:1200px) {
+        width: 1200px;
+        padding-top: 37px;
+        padding-right: 115px;
+    
         background-image: url('./../images/hero/icecream_desktop.png'), url('./../images/hero/ellipse_desktop.png');
         background-repeat: no-repeat;
         background-position: top 108px right 450px, top 55px right 267px;
@@ -49,15 +83,12 @@
         @media screen and (min-device-pixel-ratio: 2),
             screen and (min-resolution: 192dpi),
             screen and (min-resolution: 2dppx) {
-                background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
+                    background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
         }
     }
 }
 
-
-
-.nav {
-    
+.nav {    
     margin-left: auto;
     margin-right: auto;
     
