--- a/src/sass/_modal-checkbox.scss
+++ b/src/sass/_modal-checkbox.scss
@@ -32,7 +32,7 @@
 .checkbox:checked + .checkbox-icon {
   border-color: $accent-color;
   background-color: $accent-color;
-  background-image: url('../images/svg/sprite.svg#icon-check');
+  background-image: url('../images/svg/sprite.svg#icon-button_arrow');
   background-size: contain;
   background-origin: border-box;
 }
