--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -7,7 +7,7 @@
   transform: translate(-50%, -50%) scale(1);
   width: 100%;
   height: auto;
-  margin-top: 105px;
+  // margin-top: 105px;
 
   background: $main-bg;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
