--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -251,6 +251,7 @@
   line-height: 1.31;
   text-align: center;
   cursor: pointer;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) {
     display: inline;
@@ -265,6 +266,11 @@
   border-color: transparent;
   color: $main-color;
   background-color: $accent-color;
+
+  &:hover,
+  &:focus {
+    background: #ffa5ba;
+  }
 
   @media screen and (min-width: 768px) {
     margin-bottom: 0;
