added animation for hero

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,19 +7,19 @@
     <nav class="page-header__nav">
       <ul class="list">
         <li class="item">
-          <a class="link" href="">Home</a>
+          <a class="nav-link link" href="">Home</a>
         </li>
         <li class="item">
-          <a class="link" href="">About us</a>
+          <a class="nav-link link" href="">About us</a>
         </li>
         <li class="item">
-          <a class="link" href="">How it's made?</a>
+          <a class="nav-link link" href="">How it's made?</a>
         </li>
         <li class="item">
-          <a class="link" href="">Our products</a>
+          <a class="nav-link link" href="">Our products</a>
         </li>
         <li class="item">
-          <a class="link" href="">Contact</a>
+          <a class="nav-link link" href="">Contact</a>
         </li>
       </ul>
     </nav>
@@ -42,13 +42,13 @@
           <use href="./images/sprite.svg#menu"></use>
         </svg>
       </button>
-      <button class="page-header__btn-buy button" type="button">
+      <button class="btn-buy" type="button">
         <span class="title">Buy now</span>
-        <svg class="button__icon" width="15" height="15">
+        <svg class="btn-buy__icon" width="15" height="15">
           <use
             href="./images/sprite.svg#arrow-to-right"
-            width="15px"
-            height="15px"
+            width="10px"
+            height="10px"
           ></use>
         </svg>
       </button>
@@ -77,13 +77,13 @@
       </svg>
     </button>
 
-    <button class="mobile-menu__btn-buy button" type="button">
+    <button class="mobile-menu__button btn-buy" type="button">
       <span class="title">Buy now</span>
-      <svg class="button__icon" width="15" height="15">
+      <svg class="btn-buy__icon" width="15" height="15">
         <use
           href="./images/sprite.svg#arrow-to-right"
-          width="15px"
-          height="15px"
+          width="10px"
+          height="10px"
         ></use>
       </svg>
     </button>
