--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,9 +6,15 @@
         <span class="title-hero-rose">passion</span>
       </h1>
       <ul class="buttons-hero list">
-        <li><button type="button" class="button-product">Products</button></li>
         <li>
-          <button type="button" class="button-made">How it’s made?</button>
+          <button href="#product" type="button" class="button-product">
+            Products
+          </button>
+        </li>
+        <li>
+          <button href="#made" type="button" class="button-made">
+            How it’s made?
+          </button>
         </li>
       </ul>
       <picture class="picture-milk">
@@ -163,14 +169,24 @@
     <div class="decorate">
       <ul class="decor list">
         <li class="decor-item">
-          <a class="link" href="#">
+          <a
+            class="link"
+            href="https://goo.gl/maps/NwpZKvA88vHpXpxaA"
+            rel="noreferrer noopener"
+            target="_blank"
+          >
             <p class="decor-number">16</p>
             <p class="decor-text">cafes</p>
           </a>
         </li>
 
         <li class="decor-item">
-          <a class="link" href="#">
+          <a
+            class="link"
+            href="https://goo.gl/maps/cdnbg6iyqc6LdB7D7"
+            rel="noreferrer noopener"
+            target="_blank"
+          >
             <p class="decor-number">23</p>
             <p class="decor-text">food trucks</p>
           </a>
