--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -60,7 +60,7 @@
 
 .picture-ice {
   position: absolute;
-  right: 33px;
+  left: 36%;
   bottom: 0%;
 
   width: 171px;
@@ -68,12 +68,12 @@
   z-index: -1;
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    right: 255px;
+    left: 48.3%;
     width: 143px;
   }
 
   @media screen and (min-width: 1200px) {
-    right: 406px;
+    left: 46%;
     width: 236px;
   }
 }
@@ -177,6 +177,12 @@
     font-size: 14px;
     line-height: 1.28;
   }
+
+  // &:hover,
+  // &:focus {
+  //   background: #ecebeb;
+  //   color: $accent-color;
+  // }
 }
 
 .button-made {
@@ -200,6 +206,12 @@
 
     font-size: 14px;
     line-height: 1.28;
+  }
+
+  &:hover,
+  &:focus {
+    background: #ecebeb;
+    color: $accent-color;
   }
 }
 
@@ -372,6 +384,37 @@
   position: relative;
 }
 
+.decor-item {
+  transition: all 0.2s ease-in-out;
+
+  .link {
+    display: block;
+  }
+  .link:hover {
+    animation: swing 1s ease;
+    animation-iteration-count: 1;
+  }
+  @keyframes swing {
+    15% {
+      transform: translateX(5px);
+    }
+    30% {
+      transform: translateX(-5px);
+    }
+    50% {
+      transform: translateX(3px);
+    }
+    65% {
+      transform: translateX(-3px);
+    }
+    80% {
+      transform: translateX(2px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+}
 .decor-item::before {
   position: absolute;
   top: -3px;
