--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -32,6 +32,7 @@
 
   @media screen and (min-width: 1200px) {
     display: none;
+    opacity: 0;
   }
 
   &__icon {
@@ -66,20 +67,10 @@
     border: transparent;
   }
 
-  &__btn-buy {
-    height: 44px;
-
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 21px;
-
-    border-radius: 22px;
-    border: inherit;
-
-    color: #d41443;
-    fill: #d41443;
-
-    background-color: white;
+  &__button.btn-buy {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 
     @media screen and (max-width: 767px) {
       min-width: 209px;
@@ -90,12 +81,12 @@
       min-width: 186px;
       margin-bottom: 20px;
     }
+  }
+}
 
-    &:hover,
-    &:focus {
-      color: white;
-      background: #c7133e;
-      fill: white;
-    }
+.btn-buy {
+  &__icon {
+    padding-top: 3.5px;
+    padding-left: 6px;
   }
 }
