Fix container width for tablet

--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -7,7 +7,7 @@
     
         <div class="flex-container">
             <img 
-                srcset="./images/how-its-made/cow-259.png 259w, 
+                srcset="./images/how-its-made/cow-259.png 259w 
                         ./images/how-its-made/cow-388.png 388w
                         ./images/how-its-made/cow-516.png 516w
                         ./images/how-its-made/cow-775.png 775w
