Добавила новый брекпоинт моб-таб, анимацию

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -2,7 +2,7 @@
     <div class="container contact-rel">
         <div class="contact-position">
             <ul class="list contact-list">
-            <li class="contact-card">
+            <li class="contact-card" data-aos="slide-up" data-aos-offset="200">
                 <span  class="contact-label-cafe">CAFE</span>
                 <div class="contact-card-block">
                     <h3 class="contact-card-city">Chicago</h3>
@@ -19,7 +19,7 @@
                     <a class="link contact-card-link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                 </address>
             </li>
-            <li class="contact-card">
+            <li class="contact-card" data-aos="slide-up" data-aos-offset="200" data-aos-delay="100">
                 <span class="contact-label-foodtruck">FOODTRUCK</span>
                 <div class="contact-card-block">
                     <h3 class="contact-card-city">Los Angeles</h3>
@@ -36,7 +36,7 @@
                     <a class="link contact-card-link" href="mailto:noreply@envato.com">noreply@envato.com</a>
                 </address>
             </li>
-            <li class="contact-card">
+            <li class="contact-card" data-aos="slide-up" data-aos-offset="200" data-aos-delay="200">
                 <span class="contact-label-cafe">CAFE</span>
                 <div class="contact-card-block">
                     <h3 class="contact-card-city">New York</h3>
@@ -54,7 +54,7 @@
                 </address>
             </li>
             </ul>
-            <ul class="list contact-list-btn">
+            <ul class="list contact-list-btn" data-aos="zoom-in">
                 <li class="contact-list-btn-item">
                     <button class="btn-secondary contact-btn-secondary">
                         <a class="link link-contact" href="https://goo.gl/maps/kUXRjYNcF4qok5H59" target="blank" rel="noreferrer noopener">Our Locations
