--- a/src/sass/mass/_mass.scss
+++ b/src/sass/mass/_mass.scss
@@ -1,12 +1,44 @@
-.mass-overhead {
-    font-family: 'Titan One', cursive;
-    @include fonts(400, 36px, 1.13, 0.05em);
-    color: getColor('accent');
-    text-transform: uppercase;
+.section-mass {
+    background-color: getColor('lightBgrd');
 }
 
-.mass-label {
-    font-family: 'DM Sans', sans-serif;
-    @include fonts(700, 12px, 1.7, 0.03em);
-    color: getColor('primaryText');
+.mass-item {
+    @media screen and (max-width: 767px) {
+        max-width: 230px;
+
+        &:not(:last-child) {
+            margin-bottom: 38px;
+        }
+    }
+
+    @include for-size('tablet') {
+        
+    }
+
+    .mass-overhead {
+        font-family: 'Titan One', cursive;
+        color: getColor('accent');
+        text-transform: uppercase;
+
+        @media screen and (max-width: 767px) {
+            margin-bottom: 16px;
+            @include fonts(400, 36px, 1.13, 0.05em);
+        }
+
+        @include for-size('tablet') {
+            margin-bottom: 13px;
+            @include fonts(400, 48px, 1.14, 0.05em);
+        }
+    }
+    
+    .mass-label {
+        font-family: 'DM Sans', sans-serif;
+        @include fonts(700, 12px, 1.7, 0.03em);
+        color: getColor('primaryText');
+
+        @media screen and (max-width: 767px) {
+            @include fonts(700, 12px, 1.7, 0.03em);
+        }
+    }
+    
 }
